# movie-discovery

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  start.bat  stop.bat
backend/: .coverage  Dockerfile  pyproject.toml
backend/src/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/app/modules/: arr_base.py  clients.py
backend/src/app/modules/calendar/: __init__.py  router.py  service.py
backend/src/app/modules/discovery/: __init__.py  router.py  (+2 more)
backend/tests/: conftest.py  test_calendar_clients.py  test_calendar_router.py  test_calendar_service.py  test_client_factory.py  test_collection_endpoint.py  test_config_settings.py  test_discovery_router.py  test_discovery_schemas.py  test_filtered_discovery.py  test_genre_endpoints.py  test_library_activity.py  test_movie_detail_endpoint.py  test_person_endpoint.py  test_radarr_client.py  test_radarr_queue.py  test_radarr_recent.py  test_radarr_router.py  test_recommendations_router.py  test_recommendations_service.py  test_settings_encryption.py  test_settings_model.py  test_settings_router.py  test_settings_schemas.py  test_settings_service.py  test_show_detail_endpoint.py  test_sonarr_client.py  test_sonarr_queue.py  test_sonarr_recent.py  test_sonarr_router.py  test_sonarr_season_details.py  test_sonarr_seasons.py  test_sonarr_seasons_endpoint.py  test_tmdb_client.py  test_watch_providers.py  test_watchlist_batch.py  test_watchlist_migration.py  test_watchlist_router.py  test_watchlist_schemas.py  test_watchlist_season_update.py  (+2 more)
(+106 files in other folders)
